# Reflect

./: .gitignore  CMakeLists.txt  README.md
Reflect/: CMakeLists.txt
Reflect/inc/: ReflectStructs.h
Reflect/inc/Core/: Util.h
Reflect/src/CodeGenerate/: CodeGenerateSource.cpp
Reflect/src/Core/: Enums.cpp
Reflect/src/FileParser/: FileParser.cpp
ReflectDLL/: CMakeLists.txt
ReflectEXE/: CMakeLists.txt
ReflectEXE/src/: main.cpp
ReflectTest/: CMakeLists.txt
Test/: CMakeLists.txt
Test/src/: Player.h  main.cpp
